<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterUsers_fragment"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbarSize="20sp"
        android:fadeScrollbars="false"
        android:verticalScrollbarPosition="right"
        android:fillViewport="false"
        android:layout_weight="95"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterUsers_fragment_RelativeLayout">


        <TextView
            android:id="@+id/chooseAgeRangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/choose_which_ages_can_answer_your_questionnaire"
            android:textColor="#0B0B0B"
            android:textSize="20sp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/chooseAgeRangeTextView"
            android:layout_centerHorizontal="true"
            android:id="@+id/chooseAgeRangeLinearLayout">

            <NumberPicker
                android:id="@+id/from_age_range_numberPicker"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:id="@+id/toTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="20sp"

                android:layout_marginTop="80sp"

                />

            <NumberPicker
                android:id="@+id/to_age_range_numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"/>
        </LinearLayout>




        <TextView
            android:id="@+id/chooseGenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_gender_to_answer_the_questionnaire"
            android:layout_below="@+id/chooseAgeRangeLinearLayout"
            android:layout_alignParentRight="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20sp"

            />


        <NumberPicker
            android:id="@+id/genderPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseGenderTextView"
            android:layout_marginTop="10sp"
            android:layout_centerHorizontal="true"
        />


    </RelativeLayout>
    </ScrollView>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="#E68C06"
                android:textSize="30sp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:textColor="#ffffff"


                />
            <Button
                android:id="@+id/back_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_alignParentRight="true"
                android:background="#E68C06"
                android:layout_marginRight="5sp"
                android:textSize="30sp"
                android:textColor="#ffffff"

                />


            <TextView
                android:id="@+id/pathTextView"
                android:layout_toLeftOf="@+id/back_Button"
                android:layout_toRightOf="@+id/next_button"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"

                />
        </RelativeLayout>

</LinearLayout>
</FrameLayout>