<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectCategory_fragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
       >

<!--    <ScrollView-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:scrollbarSize="20sp"-->
<!--        android:fadeScrollbars="false"-->
<!--        android:verticalScrollbarPosition="right"-->
<!--        android:fillViewport="false"-->
<!--        android:layout_weight="85"-->
<!--        >-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:layout_weight="85">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectCategory_fragment_RelativeLayout">


            <TextView
                android:id="@+id/Please_select_a_category_to_post_a_questionnaireTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Please_select_a_category_to_post_a_questionnaire"

                android:textSize="20sp"
                android:layout_below="@+id/create_questionnaireTitle"
                android:gravity="right"
                android:paddingTop="15sp"

                />

            <Button
                android:id="@+id/add_category_Button"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@+id/toggleButtonGroupTableLayout"
                android:background="@drawable/plus"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                />
<!--            android:background="#eeeff4"-->
<!--            <View-->
<!--                android:id="@+id/separator"-->
<!--                android:layout_below="@+id/Please_select_a_category_to_post_a_questionnaireTextView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="2dp"-->
<!--                android:background="#444445"/>-->


            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Please_select_a_category_to_post_a_questionnaireTextView"
                android:alpha="0.9"

                />
            <com.github.ybq.android.spinkit.SpinKitView android:id="@+id/spinKit"
                style="@style/SpinKitView.Large.Circle"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_centerHorizontal="true"
                app:SpinKit_Color="#B0FFC107"
                android:layout_marginTop="100sp"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto">

            </com.github.ybq.android.spinkit.SpinKitView>

<!--            android:background="#ECEEF5"-->

<!--            <Button-->

<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/listView"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:background="#FABE52"-->
<!--                android:textSize="20sp"-->
<!--                />-->



            <TextView
                android:id="@+id/questionnaireAlreadyAddedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/You_have_already_compiled_a_questionnaire_for_this_category"
                android:layout_below="@id/add_category_Button"
                android:layout_alignParentRight="true"
                android:background="#DF5676"
                android:textSize="30sp"
                android:layout_marginTop="5sp"
                android:visibility="gone"
                />




        </RelativeLayout>
<!--    </ScrollView>-->
        </LinearLayout>





    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="15"

            >

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="#E68C06"
                android:textSize="30sp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:enabled="false"
                android:alpha="0"
                android:textColor="#ffffff"


                />
            <Button
                android:id="@+id/back_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_alignParentRight="true"
                android:background="#E68C06"
                android:layout_marginRight="5sp"
                android:textSize="30sp"
                android:enabled="false"
                android:alpha="0"
                android:textColor="#ffffff"

                />
<!--           -->

            <TextView
                android:id="@+id/pathTextView"
                android:layout_toLeftOf="@+id/back_Button"
                android:layout_toRightOf="@+id/next_button"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />

        </RelativeLayout>

    </LinearLayout>
</FrameLayout>